refactoring refresh token, create route public get allergy
