# src/config/swagger_output.json
@@ -99,6 +99,38 @@
         }
       }
     },
+    "/public/refresh-token": {
+      "post": {
+        "tags": [
+          "Public / Refresh Token"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "refreshToken": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/private/msgIA": {
       "post": {
         "tags": [
@@ -402,8 +434,59 @@
         }
       }
     },
-    "/public/webchat/{id}": {
+    "/public/client/allergy/add": {
       "post": {
+        "tags": [
+          "Public / Client"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "description": "Objeto com os dados da alergia",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "info_id": {
+                  "type": "string",
+                  "example": "35"
+                },
+                "name_illness": {
+                  "type": "string",
+                  "example": "Alergia"
+                },
+                "description": {
+                  "type": "string",
+                  "example": "Alergia a poeira"
+                }
+              },
+              "required": [
+                "info_id",
+                "name_illness",
+                "description"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/public/client/{id}": {
+      "get": {
+        "tags": [
+          "Public / Client"
+        ],
         "description": "",
         "parameters": [
           {
@@ -413,7 +496,38 @@
             "type": "string"
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/public/webchat/{id}": {
+      "post": {
+        "tags": [
+          "Public / WebChat"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {},
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/private/users": {
@@ -675,62 +789,6 @@
                   "example": "any"
                 }
               }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        },
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ]
-      }
-    },
-    "/private/client/allergy/add": {
-      "post": {
-        "tags": [
-          "Private / Client"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          },
-          {
-            "name": "obj",
-            "in": "body",
-            "description": "Objeto com os dados da alergia",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "info_id": {
-                  "type": "string",
-                  "example": "35"
-                },
-                "name_illness": {
-                  "type": "string",
-                  "example": "Alergia"
-                },
-                "description": {
-                  "type": "string",
-                  "example": "Alergia a poeira"
-                }
-              },
-              "required": [
-                "info_id",
-                "name_illness",
-                "description"
-              ]
             }
           }
         ],
