# src/controller/refreshToken.js
@@ -1,19 +1,33 @@
 const RefreshTokenServices = require("../Services/RefreshTokenServices");
+const ApiError = require("../error/apiError");
 
-class RefreshTokenController {
-  async handle(request, response) {
+exports.handle = async (request, response, next) => {
+  /*
+            #swagger.tags = ['Public / Refresh Token']
+            #swagger.security = [{
+            "bearerAuth": []
+          },
+        ]
+     */
+  try {
+    // pegando o refresh token do body
     const refreshToken = request.body.refreshToken;
 
-    const refresh_token_service = new RefreshTokenServices();
-
-    const refresh_token_response = await refresh_token_service.execute(
+    // Chamando o serviço para gerar um novo token
+    const refresh_token_response = await RefreshTokenServices.execute(
       refreshToken
     );
 
-    console.log(refresh_token_response);
+    // Verificando se existe uma instancia do ApiError e se existir ele retorna o erro
+    if (refresh_token_response instanceof ApiError) {
+      return response.status(refresh_token_response.status).json({
+        message: refresh_token_response.message,
+      });
+    }
 
-    return response.json(refresh_token_response);
+    // retornando o novo token e refreshToken
+    return response.status(200).json(refresh_token_response);
+  } catch (error) {
+    next(ApiError.badRequest(error.message));
   }
-}
-
-module.exports = RefreshTokenController;
+};
