# src/routes/privateRoutes.js
@@ -22,7 +22,6 @@ Routes.get("/client/:id", client.getAllKeys);
 Routes.put("/client/update/:id", client.updateClient);
 
 // ROTAS DE CADASTRO DE ALERGIA
-Routes.post("/client/allergy/add", client.addAllergy);
 Routes.put("/client/allergy/update/:id", client.updateAllergy);
 Routes.delete("/client/allergy/delete/:id", client.deleteAllergy);
 
